# MaimWebBackend

./: .gitignore  LICENSE  MAIMWEBBACKEND_MAIMCONFIG_API_ANALYSIS.md  create_key.py  debug_db.py  pyproject.toml  start_backend.sh  verify_backend_flow.py
docs/: API文档.md
src/: main.py
src/api/: deps.py
src/api/routes/: admin.py  agents.py  api_keys.py  auth.py  plugins.py  system.py  tenants.py
src/core/: maim_config_client.py  security.py  settings.py
src/schemas/: api_key.py  user.py
tests/: verify_flow.py
